--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
             <div class="table__cell">
               <h3 class="table__heading">500 триллионов</h3>
               <p class="table__text">
-                Число ответственных за обучение нервных синапсов<br />
-                у взрослого человека
+                Число ответственных за обучение нервных синапсов у взрослого
+                человека
               </p>
             </div>
             <div class="table__cell">
               <h3 class="table__heading">420 миллионов</h3>
               <p class="table__text">
-                Число взрослых людей<br />
-                моложе 25 лет, не имеющих образования для трудоустройства
+                Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
               </p>
               <p>Всемирный Банк, 2017</p>
             </div>
@@ -97,10 +97,7 @@
             </div>
             <div class="table__cell">
               <h3 class="table__heading">1889 год</h3>
-              <p class="table__text">
-                Открытие условного<br />
-                рефлекса
-              </p>
+              <p class="table__text">Открытие условного рефлекса</p>
             </div>
           </div>
         </section>
@@ -211,7 +208,7 @@
                   ><img
                     class="footer__social-icon"
                     src="./images/youtube-icon.svg"
-                    alt="YouTube"
+                    alt="Ютуб"
                   />YouTube</a
                 >
               </li>
@@ -220,7 +217,7 @@
                   ><img
                     class="footer__social-icon"
                     src="./images/vk_color_white.svg"
-                    alt="YouTube"
+                    alt="Вконтакте"
                   />Вконтакте</a
                 >
               </li>
@@ -229,7 +226,7 @@
                   ><img
                     class="footer__social-icon"
                     src="./images/tiktok-icon.svg"
-                    alt="YouTube"
+                    alt="ТикТок"
                   />TikTok</a
                 >
               </li>
