--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           src="./images/header-image.png"
           alt="Мальчик и собака"
         />
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic rotation"></div>
       </header>
       <main class="content">
         <section class="description">
@@ -122,26 +122,26 @@
         <section class="video">
           <h2 class="section-title">Видео нa TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-          <div class="video__iframes">
-            <iframe
-              class="video__iframe"
-              width="515"
-              height="316"
-              src="https://www.youtube.com/embed/5MgBikgcWnY"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="video__iframe"
-              width="515"
-              height="316"
-              src="https://www.youtube.com/embed/arj7oStGLkU"
-              title="YouTube video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
-          </div>
+          <ul class="video__iframes">
+            <li>
+              <iframe
+                class="video__iframe"
+                src="https://www.youtube.com/embed/5MgBikgcWnY"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </li>
+            <li>
+              <iframe
+                class="video__iframe"
+                src="https://www.youtube.com/embed/arj7oStGLkU"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </li>
+          </ul>
         </section>
         <section class="oakley">
           <article class="two-columns">
@@ -156,16 +156,6 @@
                 свой подход к точным наукам. Оказалось, если вам что-то «плохо
                 даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
                 кому всё ясно с первого взгляда.
-              </p>
-              <p class="two-columns__paragraph">
-                <span class="two-columns__span-accent">Вывод:</span> учиться
-                тоже нужно уметь, но почему-то этому мало где учат. Что с этим
-                делать?
-              </p>
-              <p class="two-columns__paragraph">
-                Конкретные техники и упражнения помогают изменить подход к
-                обучению, сделать его эффективным и захватывающим. Эти же
-                техники применяются на примере обучения в Практикуме.
               </p>
             </div>
           </article>
@@ -227,13 +217,15 @@
           <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир — школа</h2>
-            <p class="khan__quote">
-              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
-              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
-              всем, кто занимается образованием — так учащиеся повсюду смогут
-              получить навыки и знания, которые приносят успех в школе, карьере
-              и жизни.
-            </p>
+            <blockquote class="khan__quote">
+              <p>
+                Страсть и новаторство Сала Хана меняют процесс обучения
+                миллионов студентов по всему миру. Книгу «Весь мир — школа»
+                нужно прочитать всем, кто занимается образованием — так учащиеся
+                повсюду смогут получить навыки и знания, которые приносят успех
+                в школе, карьере и жизни.
+              </p>
+            </blockquote>
             <p class="khan__quote-author">Джордж Лукас</p>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           </div>
@@ -311,7 +303,7 @@
               </p>
             </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
         </section>
         <section class="resources">
           <h2 class="section-title">Полезные ресурсы</h2>
